--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    ["env", { "modules": false }],
-    "react"
+    ["@babel/preset-env", { "modules": false }],
+    "@babel/preset-react"
+  ],
+  "plugins": [
+    "react-hot-loader/babel",
+    "@babel/plugin-transform-react-jsx",
+    "@babel/plugin-proposal-object-rest-spread"
   ]
 }
