--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "url": "git://github.com/tiffz/flowers.git"
   },
   "dependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "express": "^4.16.3",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "webpack": "^4.16.3"
   },
   "devDependencies": {
