--- a/.babelrc
+++ b/.babelrc
@@ -4,8 +4,8 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "react-hot-loader/babel",
     "@babel/plugin-transform-react-jsx",
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    "react-hot-loader/babel"
   ]
 }
